@@ -1,40 +1,38 @@
 include ../config
 
-INCLUDE=`zm-config -I`
-LIB=`zm-config -L`
-DEF=`zm-config -D`
+CONFIG=dzco-config
 BINDIR=$(PREFIX)/bin
+
+INCLUDE=`$(CONFIG) -I`
+LIB=`$(CONFIG) -L`
+DEF=`$(CONFIG) -D`
+LINK=`$(CONFIG) -l`
 
 CC=gcc
 CFLAGS=-ansi -Wall -O3 $(INCLUDE) $(LIB) $(DEF)
 
-LINK=-ldzco `zm-config -l`
-
 COMPILE=$(CC) $(CFLAGS) -o $@ $< $(LINK)
-
 INSTALL=install -m 755
 UNINSTALL=rm -f
 
-CONFIGGEN=zeda-config-gen
-CONFIG=dzco-config
-TARGET=$(CONFIG) dz_bode dz_nyquist dz_frconv dz_fr2tf dz_tf2zeropole dz_sim
+TARGET=dz_bode dz_nyquist dz_frconv dz_fr2tf dz_tf2zeropole dz_sim
 
 #####################################################################
 all: $(TARGET)
 
-$(CONFIG):
-	@echo " GENERATE" $@
-	-@rm -f $@
-	@$(CONFIGGEN) -I "$(INCLUDE)" -L "$(LIB)" -D "$(DEF)" -l "$(LINK)" -v $(VERSION) > $@
 %: %.c
 	@echo " CC	" $<
 	@$(COMPILE)
-install: $(TARGET)
-	@echo " INSTALL	" $^
-	@$(INSTALL) $^ $(BINDIR)
 clean:
 	@echo " CLEAN"
 	-@rm -f *.o *~ core $(TARGET)
+install: $(TARGET)
+ifneq ($(TARGET),)
+	@echo " INSTALL	" $^
+	@$(INSTALL) $^ $(BINDIR)
+endif
 uninstall:
+ifneq ($(TARGET),)
 	@echo " UNINSTALL	" $(TARGET)
-	@cd $(BINDIR); $(UNINSTALL) $(TARGET); cd -
+	@$(UNINSTALL) $(BINDIR)/$(TARGET)
+endif
