@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.1
+VERSION=1.4.2
 
-DEPENDENCY="zeda=1.5.0;zm=1.3.0"
+DEPENDENCY="zeda=1.5.7;zm=1.3.4"
