@@ -1,0 +1,23 @@
+#This script was automatically generated by zeda-config-gen in ZEDA.
+#2021年 5月 7日 金曜日 23:36:54 JST by zhidao
+#!/bin/sh
+case $1 in
+-I)
+  echo -I/home/zhidao/usr/include -I/usr/include/libxml2
+  ;;
+-L)
+  echo -L/home/zhidao/usr/lib
+  ;;
+-D)
+  echo -D__ZEDA_USE_LIBXML
+  ;;
+-l)
+  echo -ldzco -lzm -lzeda -lm -lxml2
+  ;;
+-v)
+  echo 1.4.2
+  ;;
+*)
+  ;;
+esac
+exit 0
